// Vitest Snapshot v1

exports[`<PostTags /> > should match snapshot 1`] = `
.c0 {
  margin: 2.4rem auto;
  max-width: 80rem;
  padding: 0 3.2rem 0;
}

.c0 span {
  margin-left: 0.5rem;
}

.c0 span::before {
  content: ' ';
}

.c0 span::after {
  content: ', ';
}

.c0 span:last-child::after {
  content: '';
}

.c0 a {
  color: #7858A6;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

<div>
  <p
    class="c0"
  >
    tags:
    <span>
      <a
        href="/tag/ssr"
      >
        SSR
      </a>
    </span>
    <span>
      <a
        href="/tag/ssg"
      >
        SSG
      </a>
    </span>
    <span>
      <a
        href="/tag/studies"
      >
        Studies
      </a>
    </span>
  </p>
</div>
`;

exports[`<PostTags /> > should no tags 1`] = `
.c0 {
  margin: 2.4rem auto;
  max-width: 80rem;
  padding: 0 3.2rem 0;
}

.c0 span {
  margin-left: 0.5rem;
}

.c0 span::before {
  content: ' ';
}

.c0 span::after {
  content: ', ';
}

.c0 span:last-child::after {
  content: '';
}

.c0 a {
  color: #7858A6;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

<div>
  <p
    class="c0"
  />
</div>
`;
